--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 
 <!-- HERO -->
 <section class="hero-section  text-center">
-  <canvas id="patternCanvas" class="pattern-overlay d-none d-md-inline"></canvas>
+  <canvas id="patternCanvas" class="pattern-overlay d-none d-md-block"></canvas>
   <!-- SLIDES -->
   <div class="hero-slideshow">
     <div class="slide active">
